# Lab3ForKarpov

./: CMakeLists.txt  README.md
lib/entity/: castle.hpp  effect.hpp  enemy.hpp  entity.hpp  generateEntities.hpp  lair.hpp  magicTower.hpp  magicTrap.hpp  tower.hpp  transfer.hpp
lib/game/: game.hpp
lib/landscape/: landscape.hpp
lib/matrix/: matrix.hpp  matrix_new.hpp
lib/menu/: menu.hpp
lib/table/: table.hpp
scr/: a.out  bin  main.cpp
test/: CMakeLists.txt  test  test.cpp
test/output/: test
